--- a/Notebooks/remote_data_compilation/silo_vpd.ipynb
+++ b/Notebooks/remote_data_compilation/silo_vpd.ipynb
@@ -37,9 +37,9 @@
    "outputs": [],
    "source": [
     "working_dir = '../..'  # This repository's root directory\n",
-    "input_file_name = 'in-situ_topography_phd.csv'\n",
-    "max_temp_output_file_name = 'silo_max_temp_vpd_phd.csv'\n",
-    "min_temp_output_file_name = 'silo_min_temp_vpd_phd.csv'\n",
+    "input_file_name = 'in-situ_topography_pcs.csv'\n",
+    "max_temp_output_file_name = 'silo_max_temp_vpd_pcs.csv'\n",
+    "min_temp_output_file_name = 'silo_min_temp_vpd_pcs.csv'\n",
     "\n",
     "download_silo_data = True"
    ]
@@ -56,7 +56,13 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "import sys\n",
+    "\n",
+    "import pandas as pd\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "tqdm.pandas()\n",
     "\n",
     "sys.path.append(working_dir)\n",
     "from Utils.vpd import calculate_vpd"
@@ -86,11 +92,8 @@
    "source": [
     "# Load in-situ_topography.csv as the main df\n",
     "\n",
-    "import os\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
     "df = pd.read_csv(os.path.join(\"..\", \"..\", \"output\", \"csv\", input_file_name))\n",
+    "df = df[~df['VPD'].isna()]\n",
     "df['Datetime'] = pd.to_datetime(df['Datetime'])\n",
     "\n",
     "first_date = min(df['Datetime']).strftime(\"%Y%m%d\")\n",
@@ -264,10 +267,12 @@
     "    return silo_value\n",
     "\n",
     "\n",
-    "df_max_temp['silo_Temperature'] = df_max_temp.apply(\n",
+    "df_max_temp['silo_Temperature'] = df_max_temp.progress_apply(\n",
     "    lambda row: get_silo_value(row, 'max_temp'), axis=1\n",
     ")\n",
-    "df_max_temp['silo_RH'] = df_max_temp.apply(lambda row: get_silo_value(row, 'rh_tmax'), axis=1)\n",
+    "df_max_temp['silo_RH'] = df_max_temp.progress_apply(\n",
+    "    lambda row: get_silo_value(row, 'rh_tmax'), axis=1\n",
+    ")\n",
     "df_max_temp.head()"
    ]
   },
@@ -286,10 +291,12 @@
    "source": [
     "# Fill in df with silo data at the coldest time of the day (min_temp, RH_tmin)\n",
     "\n",
-    "df_min_temp['silo_Temperature'] = df_min_temp.apply(\n",
+    "df_min_temp['silo_Temperature'] = df_min_temp.progress_apply(\n",
     "    lambda row: get_silo_value(row, 'min_temp'), axis=1\n",
     ")\n",
-    "df_min_temp['silo_RH'] = df_min_temp.apply(lambda row: get_silo_value(row, 'rh_tmin'), axis=1)\n",
+    "df_min_temp['silo_RH'] = df_min_temp.progress_apply(\n",
+    "    lambda row: get_silo_value(row, 'rh_tmin'), axis=1\n",
+    ")\n",
     "df_min_temp.head()"
    ]
   },
@@ -336,20 +343,6 @@
    "outputs": [],
    "source": [
     "# Write a function for deriving VPD from temp and RH\n",
-    "\n",
-    "import math\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "\n",
-    "def calculate_vpd(temp, rh):\n",
-    "    if pd.isna(temp) or pd.isna(rh):\n",
-    "        return np.nan\n",
-    "    es = 0.6108 * math.exp(17.27 * temp / (237.3 + temp))\n",
-    "    e = es * rh / 100\n",
-    "    vpd = es - e\n",
-    "    return vpd\n",
-    "\n",
     "\n",
     "df_max_temp['silo_VPD'] = df_max_temp.apply(\n",
     "    lambda row: calculate_vpd(row['silo_Temperature'], row['silo_RH']), axis=1\n",
