Updated barra2.py and barra2_vpd.ipynb

--- a/Notebooks/remote_data_compilation/barra2_vpd.ipynb
+++ b/Notebooks/remote_data_compilation/barra2_vpd.ipynb
@@ -36,10 +36,10 @@
    "outputs": [],
    "source": [
     "working_dir = '../..'  # This repository's root directory\n",
-    "input_file_name = 'in-situ_topography_phd.csv'\n",
-    "output_file_name = 'barra2_vpd_phd.csv'\n",
+    "input_file_name = 'in-situ_topography_pcs.csv'\n",
+    "output_file_name = 'barra2_vpd_pcs.csv'\n",
     "\n",
-    "download_barra2_data = False  # around 30 min in Colab\n",
+    "download_barra2_data = True  # around 30 min in Colab\n",
     "explore_barra2_data = False"
    ]
   },
@@ -51,6 +51,10 @@
    "source": [
     "import os\n",
     "import sys\n",
+    "\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "tqdm.pandas()\n",
     "\n",
     "sys.path.append(working_dir)\n",
     "from Utils.barra2 import *\n",
@@ -84,8 +88,13 @@
    "source": [
     "# Load in-situ_topography.csv as the main df\n",
     "\n",
-    "df = pd.read_csv(os.path.join(\"..\", \"..\", \"output\", \"csv\", input_file_name))\n",
+    "df = pd.read_csv(os.path.join(working_dir, \"output\", \"csv\", input_file_name))\n",
+    "df = df[~df['VPD'].isna()]\n",
     "df['Datetime'] = pd.to_datetime(df['Datetime'])\n",
+    "if 'UTC_Datetime' in df.columns:\n",
+    "    df['UTC_Datetime'] = pd.to_datetime(df['UTC_Datetime'])\n",
+    "else:\n",
+    "    df = add_UTC_Datetime(df)\n",
     "\n",
     "first_datetime, last_datetime = min(df['Datetime']), (max(df['Datetime']) + pd.Timedelta(days=1))\n",
     "print(\n",
@@ -121,7 +130,7 @@
    "source": [
     "# Find the nearest barra2 grid for each site\n",
     "\n",
-    "barra2_lats, barra2_lons = get_barra2_grid_point()\n",
+    "barra2_lats, barra2_lons = get_barra2_grid_point(working_dir)\n",
     "df[['barra2_X', 'barra2_Y']] = df.apply(\n",
     "    lambda row: pd.Series(\n",
     "        find_nearest_barra2_grid_point(row['X'], row['Y'], barra2_lons, barra2_lats)\n",
@@ -167,7 +176,7 @@
     "# # BARRA2 data exploration\n",
     "\n",
     "# if explore_barra2_data:\n",
-    "#     barra2_data_dir = os.path.join(\"..\", \"..\", \"Data\", \"barra2\")\n",
+    "#     barra2_data_dir = os.path.join(working_dir, \"Data\", \"barra2\")\n",
     "#     barra2_df = pd.read_csv(os.path.join(barra2_data_dir, os.listdir(barra2_data_dir)[0]))\n",
     "#     barra2_df.info()"
    ]
@@ -222,25 +231,6 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 434
-    },
-    "id": "9-qpPHGjw84H",
-    "outputId": "72a5f4e5-cfdc-44b5-d8e6-9919791c6238"
-   },
-   "outputs": [],
-   "source": [
-    "# Generate UTC_Datetime for in-situ observations\n",
-    "\n",
-    "df = add_UTC_Datetime(df)\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
      "height": 1000
     },
     "id": "3hUnOMyNKGMM",
@@ -250,10 +240,12 @@
    "source": [
     "# For each row, open barra2 data csv file one-by-one to get data (40 min)\n",
     "\n",
-    "df['barra2_Temperature'] = df.apply(\n",
+    "df['barra2_Temperature'] = df.progress_apply(\n",
     "    lambda row: get_barra2_value(row, 'tas', barra2_data_dir), axis=1\n",
     ")\n",
-    "df['barra2_RH'] = df.apply(lambda row: get_barra2_value(row, 'hurs', barra2_data_dir), axis=1)\n",
+    "df['barra2_RH'] = df.progress_apply(\n",
+    "    lambda row: get_barra2_value(row, 'hurs', barra2_data_dir), axis=1\n",
+    ")\n",
     "df.head()"
    ]
   },
@@ -312,7 +304,7 @@
    },
    "outputs": [],
    "source": [
-    "df.to_csv(os.path.join(\"..\", \"..\", \"output\", \"csv\", output_file_name), index=False)"
+    "df.to_csv(os.path.join(working_dir, \"output\", \"csv\", output_file_name), index=False)"
    ]
   }
  ],
