--- a/Notebooks/remote_data_compilation/silo_vpd.ipynb
+++ b/Notebooks/remote_data_compilation/silo_vpd.ipynb
@@ -92,7 +92,7 @@
    "source": [
     "# Load in-situ_topography.csv as the main df\n",
     "\n",
-    "df = pd.read_csv(os.path.join(\"..\", \"..\", \"output\", \"csv\", input_file_name))\n",
+    "df = pd.read_csv(os.path.join(working_dir, \"output\", \"csv\", input_file_name))\n",
     "df = df[~df['VPD'].isna()]\n",
     "df['Datetime'] = pd.to_datetime(df['Datetime'])\n",
     "\n",
@@ -129,7 +129,7 @@
     "print(\"silo_cell_locations_list: \", silo_cell_locations_list)\n",
     "\n",
     "# Use Python loop and curl to download all silo data\n",
-    "silo_data_dir = os.path.join(\"..\", \"..\", \"Data\", \"silo\")\n",
+    "silo_data_dir = os.path.join(working_dir, \"Data\", \"silo\")\n",
     "if download_silo_data:\n",
     "    os.makedirs(silo_data_dir, exist_ok=True)\n",
     "    for x, y in silo_cell_locations_list:\n",
@@ -385,10 +385,10 @@
    "source": [
     "# save df\n",
     "df_max_temp.to_csv(\n",
-    "    os.path.join(\"..\", \"..\", \"output\", \"csv\", max_temp_output_file_name), index=False\n",
+    "    os.path.join(working_dir, \"output\", \"csv\", max_temp_output_file_name), index=False\n",
     ")\n",
     "df_min_temp.to_csv(\n",
-    "    os.path.join(\"..\", \"..\", \"output\", \"csv\", min_temp_output_file_name), index=False\n",
+    "    os.path.join(working_dir, \"output\", \"csv\", min_temp_output_file_name), index=False\n",
     ")"
    ]
   }
