--- a/Notebooks/remote_data_compilation/eratos_vpd.ipynb
+++ b/Notebooks/remote_data_compilation/eratos_vpd.ipynb
@@ -46,8 +46,8 @@
    "outputs": [],
    "source": [
     "working_dir = '../..'  # This repository's root directory\n",
-    "input_file_name = 'in-situ_topography_phd.csv'\n",
-    "output_file_name = 'eratos_vpd_phd.csv'\n",
+    "input_file_name = 'in-situ_topography_pcs.csv'\n",
+    "output_file_name = 'eratos_vpd_pcs.csv'\n",
     "\n",
     "eratos_rh_path = 'Data/eratos/ANU_CombinedSites_RH.csv'\n",
     "eratos_temp_path = 'Data/eratos/ANU_CombinedSites_Temp.csv'\n",
@@ -71,6 +71,9 @@
     "sys.path.append(working_dir)\n",
     "import os\n",
     "\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "tqdm.pandas()\n",
     "import pandas as pd\n",
     "\n",
     "from Utils.datetime import add_UTC_Datetime\n",
@@ -101,8 +104,13 @@
    "source": [
     "# Load in-situ_topography.csv as the main df\n",
     "\n",
-    "df = pd.read_csv(os.path.join(\"..\", \"..\", \"output\", \"csv\", input_file_name))\n",
+    "df = pd.read_csv(os.path.join(working_dir, \"output\", \"csv\", input_file_name))\n",
+    "df = df[~df['VPD'].isna()]\n",
     "df['Datetime'] = pd.to_datetime(df['Datetime'])\n",
+    "if 'UTC_Datetime' in df.columns:\n",
+    "    df['UTC_Datetime'] = pd.to_datetime(df['UTC_Datetime'])\n",
+    "else:\n",
+    "    df = add_UTC_Datetime(df)\n",
     "df.head()"
    ]
   },
@@ -128,7 +136,7 @@
    },
    "outputs": [],
    "source": [
-    "eratos_rh_data_dir = os.path.join(\"..\", \"..\", eratos_rh_path)\n",
+    "eratos_rh_data_dir = os.path.join(working_dir, eratos_rh_path)\n",
     "eratos_rh_df = pd.read_csv(eratos_rh_data_dir)\n",
     "eratos_rh_df.head()"
    ]
@@ -139,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eratos_temp_data_dir = os.path.join(\"..\", \"..\", eratos_temp_path)\n",
+    "eratos_temp_data_dir = os.path.join(working_dir, eratos_temp_path)\n",
     "eratos_temp_df = pd.read_csv(eratos_temp_data_dir)\n",
     "eratos_temp_df.head()"
    ]
@@ -151,25 +159,6 @@
    },
    "source": [
     "# Combining in-situ and remote data into a single dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 414
-    },
-    "id": "kiwiwNdICpFD",
-    "outputId": "ff2091b6-0c25-4b03-9a67-eb47dbc62155"
-   },
-   "outputs": [],
-   "source": [
-    "# Generate UTC_Datetime for in-situ observations\n",
-    "\n",
-    "df = add_UTC_Datetime(df)\n",
-    "df.head()"
    ]
   },
   {
@@ -191,17 +180,18 @@
     "# For each row, open eratos data csv file one-by-one to get data\n",
     "def get_eratos_value(row, eratos_df):\n",
     "    SiteID_str = str(row['SiteID'])\n",
+    "    SiteID_str = ''.join(c for c in SiteID_str if c.isdigit())\n",
     "\n",
     "    target_time = row['UTC_Datetime'].round('1h').strftime('%Y-%m-%d %H:%M:%S')\n",
     "    eratos_value = eratos_df.loc[eratos_df['Date_time'] == target_time, SiteID_str].values[0]\n",
-    "    print(SiteID_str, target_time)\n",
-    "    print(eratos_value)\n",
     "\n",
     "    return eratos_value\n",
     "\n",
     "\n",
-    "df['eratos_Temperature'] = df.apply(lambda row: get_eratos_value(row, eratos_temp_df), axis=1)\n",
-    "df['eratos_RH'] = df.apply(lambda row: get_eratos_value(row, eratos_rh_df), axis=1)\n",
+    "df['eratos_Temperature'] = df.progress_apply(\n",
+    "    lambda row: get_eratos_value(row, eratos_temp_df), axis=1\n",
+    ")\n",
+    "df['eratos_RH'] = df.progress_apply(lambda row: get_eratos_value(row, eratos_rh_df), axis=1)\n",
     "df.head()"
    ]
   },
@@ -267,7 +257,7 @@
    },
    "outputs": [],
    "source": [
-    "df.to_csv(os.path.join(\"..\", \"..\", \"output\", \"csv\", output_file_name), index=False)"
+    "df.to_csv(os.path.join(working_dir, \"output\", \"csv\", output_file_name), index=False)"
    ]
   },
   {
