Handled invalid values in PCS data

--- a/Notebooks/in-situ_data_preparation/pcs.ipynb
+++ b/Notebooks/in-situ_data_preparation/pcs.ipynb
@@ -7,16 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install geopy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "working_dir = '../..'  # This repository's root directory\n",
     "pcs_folder_path = (\n",
     "    'Data/pcs'  # Some observations were recorded twice. One with and one without gps data\n",
@@ -29,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +39,13 @@
     "\n",
     "sys.path.append(working_dir)\n",
     "from Utils.datetime import add_Australia_Datetime\n",
+    "from Utils.rh import handle_exceeding_rh\n",
     "from Utils.vpd import calculate_vpd"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3",
+   "id": "2",
    "metadata": {},
    "source": [
     "# Extract latlon of each site location using DBSCAN"
@@ -63,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "7",
    "metadata": {},
    "source": [
     "# Prepare pcs.csv"
@@ -177,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,14 +217,13 @@
     "    },\n",
     "    inplace=True,\n",
     ")\n",
-    "df_all['VPD'] = df_all.apply(lambda row: calculate_vpd(row['Temperature'], row['RH']), axis=1)\n",
     "df_all.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,6 +237,20 @@
     "    lambda t: pd.to_datetime(t).tz_localize(None)\n",
     ")\n",
     "df_all.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Handle invalid values\n",
+    "\n",
+    "df_all.replace(99.9, np.nan, inplace=True)\n",
+    "df_all = handle_exceeding_rh(df_all)\n",
+    "df_all['VPD'] = df_all.apply(lambda row: calculate_vpd(row['Temperature'], row['RH']), axis=1)"
    ]
   },
   {
