--- a/Notebooks/in-situ_data_preparation/phd.ipynb
+++ b/Notebooks/in-situ_data_preparation/phd.ipynb
@@ -63,6 +63,7 @@
     "\n",
     "sys.path.append(working_dir)\n",
     "from Utils.barra2 import *\n",
+    "from Utils.rh import handle_exceeding_rh\n",
     "from Utils.vpd import calculate_vpd"
    ]
   },
@@ -275,40 +276,7 @@
    "source": [
     "# Handle 'RH' > 100\n",
     "\n",
-    "# Find MaxRH for each site and date\n",
-    "df['Date'] = df.apply(lambda row: row['Datetime'].date(), axis=1)\n",
-    "df['MaxRH'] = df.groupby(['SiteID', 'Date'])['RH'].transform('max')\n",
-    "\n",
-    "# Find MaxRH95 for each site\n",
-    "df['MaxRH95'] = df.groupby(['SiteID'])['MaxRH'].transform(lambda x: x.quantile(0.95))\n",
-    "\n",
-    "# Apply correction the RH values. If RH is greater than MaxRH95, RH = 100, else RH = RH*100/MaxRH95\n",
-    "df['RH'] = df.apply(\n",
-    "    lambda row: (\n",
-    "        100 if (row['RH'] > row['MaxRH95']) | (row['RH'] < 0) else row['RH'] * 100 / row['MaxRH95']\n",
-    "    ),\n",
-    "    axis=1,\n",
-    ")\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 206
-    },
-    "id": "GR2NMdV-8iI6",
-    "outputId": "2a877964-c6f3-46bd-84f8-9fdc5c18065a"
-   },
-   "outputs": [],
-   "source": [
-    "# Check the correctness of the calculation\n",
-    "# df.groupby(['MaxRH95'])['SiteID'].apply(lambda x: x.unique()).reset_index()\n",
-    "\n",
-    "df.drop(columns=['MaxRH', 'MaxRH95', 'Date'], inplace=True)\n",
+    "df = handle_exceeding_rh(df)\n",
     "df.head()"
    ]
   },
@@ -423,21 +391,6 @@
    },
    "source": [
     "# Add biophysical properties into dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "GmsKZWfE6EJh",
-    "outputId": "15af84db-902e-4fdf-8410-7e28aa858315"
-   },
-   "outputs": [],
-   "source": [
-    "!pip install rasterio"
    ]
   },
   {
