--- a/Notebooks/remote_data_compilation/eratos_sdi.ipynb
+++ b/Notebooks/remote_data_compilation/eratos_sdi.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "working_dir = '../..'  # This repository's root directory\n",
     "input_file_name = 'in-situ_topography_pcs.csv'\n",
-    "output_file_name = 'eratos_sdi_pcs.csv'\n",
+    "output_file_name = 'eratos_sdi_pcs_min_soil_mois.csv'\n",
     "\n",
     "eratos_sdi_path = 'Data/eratos/ANU_CombinedSites_SDI.csv'  # daily"
    ]
@@ -151,6 +151,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Selecting only obs with has the daily min Soil_mois value\n",
+    "\n",
+    "# Assign eratos_observation_date to each observation\n",
+    "df['eratos_observation_date'] = df['UTC_Datetime'].dt.date\n",
+    "\n",
+    "# Select only rows with min soil_mois of the day\n",
+    "df['Day_min_soil_mois'] = df.groupby(['SiteID', 'eratos_observation_date'])['Soil_mois'].transform(\n",
+    "    'min'\n",
+    ")\n",
+    "df_min_soil_mois = df[df['Soil_mois'] == df['Day_min_soil_mois']]\n",
+    "\n",
+    "df_min_soil_mois.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -161,7 +181,7 @@
    },
    "outputs": [],
    "source": [
-    "# Fill in df with eratos data\n",
+    "# Fill in df_min_soil_mois with eratos data\n",
     "\n",
     "\n",
     "# For each row, open eratos data csv file one-by-one to get data\n",
@@ -175,8 +195,10 @@
     "    return eratos_value\n",
     "\n",
     "\n",
-    "df['eratos_SDI'] = df.progress_apply(lambda row: get_eratos_value(row, eratos_sdi_df), axis=1)\n",
-    "df.head()"
+    "df_min_soil_mois['eratos_SDI'] = df_min_soil_mois.progress_apply(\n",
+    "    lambda row: get_eratos_value(row, eratos_sdi_df), axis=1\n",
+    ")\n",
+    "df_min_soil_mois.head()"
    ]
   },
   {
@@ -193,7 +215,7 @@
    "outputs": [],
    "source": [
     "# Investigate the result - There are only NaNs in veg_cover column\n",
-    "df[df['eratos_SDI'].isna()]"
+    "df_min_soil_mois[df_min_soil_mois['eratos_SDI'].isna()]"
    ]
   },
   {
@@ -213,7 +235,7 @@
    },
    "outputs": [],
    "source": [
-    "df.to_csv(os.path.join(working_dir, \"output\", \"csv\", output_file_name), index=False)"
+    "df_min_soil_mois.to_csv(os.path.join(working_dir, \"output\", \"csv\", output_file_name), index=False)"
    ]
   },
   {
