Alightly changed the naming convention

--- a/Notebooks/Exploratory_analysis.ipynb
+++ b/Notebooks/Exploratory_analysis.ipynb
@@ -9,10 +9,7 @@
    "outputs": [],
    "source": [
     "# Input is the BRMS model input csv file name\n",
-    "# file_name = \"barra2_vpd_phd.csv\"\n",
-    "# file_name = \"eratos_vpd_phd.csv\"\n",
-    "# file_name = \"silo_min_temp_vpd_phd.csv\"\n",
-    "file_name = \"silo_max_temp_vpd_phd.csv\""
+    "file_name = \"silo_vpd_pcs_max_temp.csv\""
    ]
   },
   {
