--- a/Notebooks/remote_data_compilation/silo_vpd.ipynb
+++ b/Notebooks/remote_data_compilation/silo_vpd.ipynb
@@ -38,8 +38,8 @@
    "source": [
     "working_dir = '../..'  # This repository's root directory\n",
     "input_file_name = 'in-situ_topography_pcs.csv'\n",
-    "max_temp_output_file_name = 'silo_max_temp_vpd_pcs.csv'\n",
-    "min_temp_output_file_name = 'silo_min_temp_vpd_pcs.csv'\n",
+    "max_temp_output_file_name = 'silo_vpd_pcs_max_temp.csv'\n",
+    "min_temp_output_file_name = 'silo_vpd_pcs_min_temp.csv'\n",
     "\n",
     "download_silo_data = True"
    ]
