Aligned Datetime and UTC_Datetime formats

--- a/Notebooks/in-situ_data_preparation/pcs.ipynb
+++ b/Notebooks/in-situ_data_preparation/pcs.ipynb
@@ -38,7 +38,7 @@
     "tqdm.pandas()\n",
     "\n",
     "sys.path.append(working_dir)\n",
-    "from Utils.datetime import add_Australia_Datetime\n",
+    "from Utils.datetime import add_Canberra_Datetime\n",
     "from Utils.rh import handle_exceeding_rh\n",
     "from Utils.vpd import calculate_vpd"
    ]
@@ -229,13 +229,7 @@
    "source": [
     "# Add Australia time\n",
     "\n",
-    "df_all = add_Australia_Datetime(df)\n",
-    "df_all['Datetime'] = df_all['Datetime'].progress_apply(\n",
-    "    lambda t: pd.to_datetime(t).tz_localize(None)\n",
-    ")\n",
-    "df_all['UTC_Datetime'] = df_all['UTC_Datetime'].progress_apply(\n",
-    "    lambda t: pd.to_datetime(t).tz_localize(None)\n",
-    ")\n",
+    "df_all = add_Canberra_Datetime(df)\n",
     "df_all.head()"
    ]
   },
@@ -290,6 +284,14 @@
     "# Check NaNs\n",
     "df_all[df_all.isna().any(axis=1)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
