Created draft of sentinel2_dfmc.ipynb and refactored get_daily_extreme_observation()

--- a/Notebooks/remote_data_compilation/sentinel2_dfmc.ipynb
+++ b/Notebooks/remote_data_compilation/sentinel2_dfmc.ipynb
@@ -11,33 +11,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "f9MJocir9tJU"
-   },
-   "source": [
-    "# Start\n",
-    "\n",
-    "\n",
-    "This script prepares vapor pressure deficit (VPD) data from eratos and matches it with VPD from field observations for subsequent analysis.\n",
-    "\n",
-    "TODO (HIGH): The information below is the copy of documentation of another script. Update it.\n",
-    "\n",
-    "📄 **What this script does**\n",
-    "1. Loads cleaned field data with topography — for example, output from `Nick_phd_data_complilation.ipynb`.\n",
-    "2. Downloads **eratos data** for the grid cells closest to the field sites, spanning from the first day to one day after the last day of the field observations.\n",
-    "3. Find the field observations with the highest and lowest temperature between 9am to 9am of each day and put them separately in `df` and `df_min_temp`. When there are multiple observations with the highest or lowest temperatures, the ones with the lowest RH are selected.\n",
-    "4. Matches eratos temperature and RH values to the field observations in `df` and `df_min_temp` based on the nearest eratos grid cell and `eratos_observation_date`.\n",
-    "5. For both `df` and `df_min_temp`, calculates **VPD** (vapor pressure deficit) from the matched eratos temperature and RH.\n",
-    "6. Saves the combined field and eratos data as `eratos_max_temp.csv` and `eratos_min_temp.csv` in the `output/csv` folder.\n",
-    "\n",
-    "\n",
-    "⚠️ **Important notes**\n",
-    "* Before running the script, set all variables in the **first cell**, and delete the **second cell** if not using a Google Colab environment.  \n",
-    "  *(The script was developed for use in Google Colab and has not been tested outside of it.)*\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -47,9 +20,10 @@
    "source": [
     "working_dir = '../..'  # This repository's root directory\n",
     "input_file_name = 'in-situ_topography_pcs.csv'\n",
-    "output_file_name = 'eratos_sdi_pcs_min_soil_mois.csv'\n",
+    "daily_min_output_file_name = 'sentinel2_dfmc_pcs_min_dfmc.csv'\n",
+    "nearest_time_output_file_name = 'sentinel2_dfmc_pcs_nearest_time.csv'\n",
     "\n",
-    "eratos_sdi_path = 'Data/eratos/ANU_CombinedSites_SDI.csv'  # daily"
+    "sentinel2_path = 'Data/sentinel2/FMC_actparks_forest_corp_sites_DEA_fmc_est.csv'"
    ]
   },
   {
@@ -75,8 +49,7 @@
     "import pandas as pd\n",
     "\n",
     "from Utils.daily_minmax import get_daily_extreme_observation\n",
-    "from Utils.datetime import add_UTC_Datetime\n",
-    "from Utils.vpd import calculate_vpd"
+    "from Utils.datetime import add_UTC_Datetime"
    ]
   },
   {
@@ -104,7 +77,7 @@
     "# Load in-situ_topography.csv as the main df\n",
     "\n",
     "df = pd.read_csv(os.path.join(working_dir, \"output\", \"csv\", input_file_name))\n",
-    "df = df[~df['Soil_mois'].isna()]\n",
+    "df = df[~df['DFMC'].isna()]\n",
     "df['Datetime'] = pd.to_datetime(df['Datetime'])\n",
     "if 'UTC_Datetime' in df.columns:\n",
     "    df['UTC_Datetime'] = pd.to_datetime(df['UTC_Datetime'])\n",
@@ -119,7 +92,7 @@
     "id": "pl_98DiIWL40"
    },
    "source": [
-    "# Loading ERATOS data"
+    "# Loading Sentinel-2 data"
    ]
   },
   {
@@ -135,9 +108,9 @@
    },
    "outputs": [],
    "source": [
-    "eratos_sdi_data_dir = os.path.join(working_dir, eratos_sdi_path)\n",
-    "eratos_sdi_df = pd.read_csv(eratos_sdi_data_dir)\n",
-    "eratos_sdi_df.head()"
+    "sentinel2_data_dir = os.path.join(working_dir, sentinel2_path)\n",
+    "sentinel2_df = pd.read_csv(sentinel2_data_dir)\n",
+    "sentinel2_df.head()"
    ]
   },
   {
@@ -155,13 +128,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Selecting only obs with has the daily min Soil_mois value\n",
+    "# Selecting only obs with has the daily min dfmc value\n",
     "\n",
-    "variable = 'Soil_mois'\n",
-    "date_column_name = 'eratos_observation_date'\n",
+    "variable = 'DFMC'\n",
+    "date_column_name = 'sentinel2_observation_date'\n",
     "df[date_column_name] = df['Datetime'].dt.date\n",
-    "df_min_soil_mois = get_daily_extreme_observation(df, variable, date_column_name, option='min')\n",
-    "df_min_soil_mois.head()"
+    "df_min_dfmc = get_daily_extreme_observation(df, variable, date_column_name, option='min')\n",
+    "df_min_dfmc.head()"
    ]
   },
   {
@@ -170,12 +143,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Select the first observations if there are multiple ones that has daily minimum soil_mois\n",
+    "# Select the first observations if there are multiple ones that has daily minimum dfmc\n",
     "\n",
-    "df_min_soil_mois = df_min_soil_mois.loc[\n",
-    "    df_min_soil_mois.groupby(['SiteID', 'sentinel2_observation_date'])['Datetime'].idxmin()\n",
+    "df_min_dfmc = df_min_dfmc.loc[\n",
+    "    df_min_dfmc.groupby(['SiteID', 'sentinel2_observation_date'])['Datetime'].idxmin()\n",
     "]\n",
-    "df_min_soil_mois.head()"
+    "df_min_dfmc.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO (HIGH): Make df_nearest_time, consisting of one nearest site obs to one Sentinel-2 obs\n",
+    "df_nearest_time"
    ]
   },
   {
@@ -191,24 +174,27 @@
    },
    "outputs": [],
    "source": [
-    "# Fill in df_min_soil_mois with eratos data\n",
+    "# Fill in df_min_dfmc with sentinel2 data\n",
     "\n",
     "\n",
-    "# For each row, open eratos data csv file one-by-one to get data\n",
-    "def get_eratos_value(row, eratos_df):\n",
-    "    SiteID_str = str(row['SiteID'])\n",
-    "    SiteID_str = ''.join(c for c in SiteID_str if c.isdigit())\n",
+    "# For each row, open sentinel2 data csv file one-by-one to get data\n",
+    "def get_sentinel2_value(row, sentinel2_df):\n",
+    "    # TODO (HIGH):\n",
     "\n",
-    "    target_time = row['UTC_Datetime'].round('1d').strftime('%Y-%m-%d')\n",
-    "    eratos_value = eratos_df.loc[eratos_df['Date'] == target_time, SiteID_str].values[0]\n",
+    "    return\n",
+    "    # SiteID_str = str(row['SiteID'])\n",
+    "    # SiteID_str = ''.join(c for c in SiteID_str if c.isdigit())\n",
     "\n",
-    "    return eratos_value\n",
+    "    # target_time = row['UTC_Datetime'].round('1d').strftime('%Y-%m-%d')\n",
+    "    # sentinel2_value = sentinel2_df.loc[sentinel2_df['Date'] == target_time, SiteID_str].values[0]\n",
+    "\n",
+    "    # return sentinel2_value\n",
     "\n",
     "\n",
-    "df_min_soil_mois['eratos_SDI'] = df_min_soil_mois.progress_apply(\n",
-    "    lambda row: get_eratos_value(row, eratos_sdi_df), axis=1\n",
+    "df_min_dfmc['sentinel2_DFMC'] = df_min_dfmc.progress_apply(\n",
+    "    lambda row: get_sentinel2_value(row, sentinel2_df), axis=1\n",
     ")\n",
-    "df_min_soil_mois.head()"
+    "df_min_dfmc.head()"
    ]
   },
   {
@@ -225,7 +211,17 @@
    "outputs": [],
    "source": [
     "# Investigate the result - There are only NaNs in veg_cover column\n",
-    "df_min_soil_mois[df_min_soil_mois['eratos_SDI'].isna()]"
+    "df_min_dfmc[df_min_dfmc['sentinel2_DFMC'].isna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Investigate the result - There are only NaNs in veg_cover column\n",
+    "df_nearest_time[df_nearest_time['sentinel2_DFMC'].isna()]"
    ]
   },
   {
@@ -245,7 +241,12 @@
    },
    "outputs": [],
    "source": [
-    "df_min_soil_mois.to_csv(os.path.join(working_dir, \"output\", \"csv\", output_file_name), index=False)"
+    "df_min_dfmc.to_csv(\n",
+    "    os.path.join(working_dir, \"output\", \"csv\", daily_min_output_file_name), index=False\n",
+    ")\n",
+    "df_nearest_time.to_csv(\n",
+    "    os.path.join(working_dir, \"output\", \"csv\", nearest_time_output_file_name), index=False\n",
+    ")"
    ]
   },
   {
