--- a/Notebooks/remote_data_compilation/sentinel2_dfmc.ipynb
+++ b/Notebooks/remote_data_compilation/sentinel2_dfmc.ipynb
@@ -132,7 +132,7 @@
     "\n",
     "variable = 'DFMC'\n",
     "date_column_name = 'sentinel2_observation_date'\n",
-    "df[date_column_name] = df['Datetime'].dt.date\n",
+    "df[date_column_name] = df['UTC_Datetime'].dt.date\n",
     "df_min_dfmc = get_daily_extreme_observation(df, variable, date_column_name, option='min')\n",
     "df_min_dfmc.head()"
    ]
@@ -146,7 +146,7 @@
     "# Select the first observations if there are multiple ones that has daily minimum dfmc\n",
     "\n",
     "df_min_dfmc = df_min_dfmc.loc[\n",
-    "    df_min_dfmc.groupby(['SiteID', 'sentinel2_observation_date'])['Datetime'].idxmin()\n",
+    "    df_min_dfmc.groupby(['SiteID', 'sentinel2_observation_date'])['UTC_Datetime'].idxmin()\n",
     "]\n",
     "df_min_dfmc.head()"
    ]
