--- a/Notebooks/remote_data_compilation/eratos_sdi.ipynb
+++ b/Notebooks/remote_data_compilation/eratos_sdi.ipynb
@@ -159,7 +159,7 @@
     "\n",
     "variable = 'Soil_mois'\n",
     "date_column_name = 'eratos_observation_date'\n",
-    "df[date_column_name] = df['Datetime'].dt.date\n",
+    "df[date_column_name] = df['UTC_Datetime'].dt.date\n",
     "df_min_soil_mois = get_daily_extreme_observation(df, variable, date_column_name, option='min')\n",
     "df_min_soil_mois.head()"
    ]
@@ -173,7 +173,7 @@
     "# Select the first observations if there are multiple ones that has daily minimum soil_mois\n",
     "\n",
     "df_min_soil_mois = df_min_soil_mois.loc[\n",
-    "    df_min_soil_mois.groupby(['SiteID', 'sentinel2_observation_date'])['Datetime'].idxmin()\n",
+    "    df_min_soil_mois.groupby(['SiteID', 'eratos_observation_date'])['UTC_Datetime'].idxmin()\n",
     "]\n",
     "df_min_soil_mois.head()"
    ]
