--- a/Notebooks/remote_data_compilation/eratos_vpd.ipynb
+++ b/Notebooks/remote_data_compilation/eratos_vpd.ipynb
@@ -3,38 +3,13 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "colab_type": "text",
-    "id": "view-in-github"
-   },
-   "source": [
-    "<a href=\"https://colab.research.google.com/github/DiaPorntipa/Bushfire_data_analytics/blob/main/Acclimatised_data_compilation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "f9MJocir9tJU"
    },
    "source": [
     "# Start\n",
     "\n",
     "\n",
-    "This script prepares vapor pressure deficit (VPD) data from eratos and matches it with VPD from field observations for subsequent analysis.\n",
-    "\n",
-    "TODO (HIGH): The information below is the copy of documentation of another script. Update it.\n",
-    "\n",
-    "📄 **What this script does**\n",
-    "1. Loads cleaned field data with topography — for example, output from `Nick_phd_data_complilation.ipynb`.\n",
-    "2. Downloads **eratos data** for the grid cells closest to the field sites, spanning from the first day to one day after the last day of the field observations.\n",
-    "3. Find the field observations with the highest and lowest temperature between 9am to 9am of each day and put them separately in `df` and `df_min_temp`. When there are multiple observations with the highest or lowest temperatures, the ones with the lowest RH are selected.\n",
-    "4. Matches eratos temperature and RH values to the field observations in `df` and `df_min_temp` based on the nearest eratos grid cell and `eratos_observation_date`.\n",
-    "5. For both `df` and `df_min_temp`, calculates **VPD** (vapor pressure deficit) from the matched eratos temperature and RH.\n",
-    "6. Saves the combined field and eratos data as `eratos_max_temp.csv` and `eratos_min_temp.csv` in the `output/csv` folder.\n",
-    "\n",
-    "\n",
-    "⚠️ **Important notes**\n",
-    "* Before running the script, set all variables in the **first cell**, and delete the **second cell** if not using a Google Colab environment.  \n",
-    "  *(The script was developed for use in Google Colab and has not been tested outside of it.)*\n"
+    "This script prepares houly Vapor Pressure Deficit (VPD) data from ERATOS and matches it with VPD from field observations for subsequent analysis.\n"
    ]
   },
   {
