--- a/Notebooks/remote_data_compilation/sentinel2_dfmc.ipynb
+++ b/Notebooks/remote_data_compilation/sentinel2_dfmc.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "view-in-github"
-   },
+   "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/DiaPorntipa/Bushfire_data_analytics/blob/main/Acclimatised_data_compilation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "# Start\n",
+    "\n",
+    "This script prepares Dry Fuel Moisture Content (DFMC) data from Sentinel-2 available every 2 - 5 days and matches it with (TODO (HIGH): daily min DFMC) DFMC from field observations for subsequent analysis."
    ]
   },
   {
