--- a/Notebooks/topography/topography_calculation.ipynb
+++ b/Notebooks/topography/topography_calculation.ipynb
@@ -8,19 +8,7 @@
    "source": [
     "# Start\n",
     "\n",
-    "This script calculates slope, aspect, and relief of a selected square area in Australia from a DEM (Digital Elevation Model) `.tif` file.\n",
-    "\n",
-    "📄 **What this script does**\n",
-    "1. Loads the Australia DEM `.tif` file, crops it using the intersection of the desired `bbox` and the Australia shapefile, and saves the result as `{location_name}_dem.tif` in the `output` folder.\n",
-    "2. Loads `{location_name}_dem.tif`, replaces negative values with 0 and `-9999` with `np.nan`, then saves the result as `{location_name}_dem_no_neg.tif` in the `output` folder.\n",
-    "3. Uses `gdal.DEMProcessing()` to generate `{location_name}_slope.tif` and `{location_name}_aspect.tif` from `{location_name}_dem_no_neg.tif`.\n",
-    "4. Calculates relief as the median elevation within 5 km tiles, and saves the result as `{location_name}_relief.tif` in the `output` folder.  \n",
-    "   Note: DEM values in offshore areas are filled with zeroes to enable relief calculation near coastlines.\n",
-    "\n",
-    "⚠️ **Important notes**\n",
-    "* Before running the script, set all variables in the **first cell**, and delete the **second cell** if not using a Google Colab environment.  \n",
-    "  *(The script was developed for use in Google Colab and has not been tested outside of it.)*\n",
-    "* Some relief values near the `bbox` border may be inaccurately filled for convenience in coastal calculations. This should not affect results as long as selected points are not near the `bbox` border.\n"
+    "This script calculates slope, aspect, and relief of a selected square area (bbox) in Australia from a DEM (Digital Elevation Model) `.tif` file.\n"
    ]
   },
   {
