--- a/Notebooks/topography/topography_insertion.ipynb
+++ b/Notebooks/topography/topography_insertion.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Start\n",
+    "\n",
+    "This script fills in slope, relief, aspect, vegetation cover data into in-situ observations. It can only be used to filled in vegetation cover value that are saved individually for each site. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
