--- a/Notebooks/remote_data_compilation/barra2_soil_mois.ipynb
+++ b/Notebooks/remote_data_compilation/barra2_soil_mois.ipynb
@@ -8,23 +8,7 @@
    "source": [
     "# Start\n",
     "\n",
-    "This script prepares vapor pressure deficit (VPD) data from BARRA2 and matches it with VPD from field observations for subsequent analysis.\n",
-    "\n",
-    "📄 **What this script does**\n",
-    "1. Loads cleaned field data with topography — for example, output from `Nick_phd_data_complilation.ipynb`.\n",
-    "2. Downloads and explores **BARRA2 data** (`tas` for temperature and `hurs` for relative humidity) for the grid cells closest to the field sites, spanning from the first to the last month of the field observations.\n",
-    "3. Matches BARRA2 temperature and RH values to the field observations based on the nearest grid cell and UTC timestamp.\n",
-    "4. Calculates **VPD** (vapor pressure deficit) from the matched BARRA2 temperature and RH.\n",
-    "5. Saves the combined field and BARRA2 data as `barra2.csv` in the `output/csv` folder.\n",
-    "\n",
-    "⚠️ **Important notes**\n",
-    "* Before running the script, set all variables in the **first cell**, and delete the **second cell** if not using a Google Colab environment.  \n",
-    "  *(The script was developed for use in Google Colab and has not been tested outside of it.)*\n",
-    "* The field data timestamps must be in **Australian local time**. The script will convert them to **UTC** before matching with BARRA2 data.\n",
-    "* BARRA2's temperature and RH are **instantaneous** readings.\n",
-    "* Field observations with **ambiguous timestamps** (e.g., during the daylight saving transition from AEDT to AEST) will be **excluded** from the output.\n",
-    "\n",
-    "\n"
+    "This script prepares hourly 'mrsos' (Moisture in Upper Portion of Soil Column) data from BARRA2 and matches it with soil moisture from field observations for subsequent analysis.\n"
    ]
   },
   {
