--- a/Notebooks/remote_data_compilation/silo_vpd.ipynb
+++ b/Notebooks/remote_data_compilation/silo_vpd.ipynb
@@ -9,23 +9,7 @@
     "# Start\n",
     "\n",
     "\n",
-    "This script prepares vapor pressure deficit (VPD) data from SILO and matches it with VPD from field observations for subsequent analysis.\n",
-    "\n",
-    "\n",
-    "📄 **What this script does**\n",
-    "1. Loads cleaned field data with topography — for example, output from `Nick_phd_data_complilation.ipynb`.\n",
-    "2. Downloads **SILO data** for the grid cells closest to the field sites, spanning from the first day to one day after the last day of the field observations.\n",
-    "3. Find the field observations with the highest and lowest temperature between 9am to 9am of each day and put them separately in `df_max_temp` and `df_min_temp`. When there are multiple observations with the highest or lowest temperatures, the ones with the lowest RH are selected.\n",
-    "4. Matches SILO temperature and RH values to the field observations in `df_max_temp` and `df_min_temp` based on the nearest SILO grid cell and `silo_observation_date`.\n",
-    "5. For both `df_max_temp` and `df_min_temp`, calculates **VPD** (vapor pressure deficit) from the matched SILO temperature and RH.\n",
-    "6. Saves the combined field and SILO data as `silo_max_temp.csv` and `silo_min_temp.csv` in the `output/csv` folder.\n",
-    "\n",
-    "\n",
-    "⚠️ **Important notes**\n",
-    "* Before running the script, set all variables in the **first cell**, and delete the **second cell** if not using a Google Colab environment.  \n",
-    "  *(The script was developed for use in Google Colab and has not been tested outside of it.)*\n",
-    "* The **first and last observation dates** of each site are **disregarded** because there is no temperature data for the whole day for those dates.\n",
-    "* Obsevations with timestamps between 8.59 am of 1 April 2020 to 9.00 am of 2 April 202 have `silo_observation_date` as 2 April 2020.\n"
+    "This script prepares vapor pressure deficit (VPD) data during the hottest and coldest time of a day  from SILO and matches it with VPD from field observations for subsequent analysis.\n"
    ]
   },
   {
