--- a/Notebooks/in-situ_data_preparation/pcs.ipynb
+++ b/Notebooks/in-situ_data_preparation/pcs.ipynb
@@ -48,7 +48,7 @@
     "tqdm.pandas()\n",
     "\n",
     "sys.path.append(working_dir)\n",
-    "from Utils.datetime import add_Canberra_Datetime\n",
+    "from Utils.datetime import *\n",
     "from Utils.rh import handle_exceeding_rh\n",
     "from Utils.vpd import calculate_vpd"
    ]
@@ -239,7 +239,8 @@
    "source": [
     "# Add Australia time\n",
     "\n",
-    "df_all = add_Canberra_Datetime(df)\n",
+    "df_all = add_Canberra_Datetime(df_all)\n",
+    "df_all = add_AEST_Datetime(df_all)\n",
     "df_all.head()"
    ]
   },
