--- a/Notebooks/in-situ_data_preparation/phd.ipynb
+++ b/Notebooks/in-situ_data_preparation/phd.ipynb
@@ -41,6 +41,7 @@
     "\n",
     "sys.path.append(working_dir)\n",
     "from Utils.barra2 import *\n",
+    "from Utils.datetime import *\n",
     "from Utils.rh import handle_exceeding_rh\n",
     "from Utils.vpd import calculate_vpd"
    ]
@@ -682,6 +683,7 @@
    "outputs": [],
    "source": [
     "# save df\n",
+    "df = add_AEST_Datetime(df)\n",
     "df.to_csv(os.path.join(output_dir, 'in-situ_topography_phd.csv'), index=False)\n",
     "df"
    ]
