--- a/Notebooks/topography/topography_insertion.ipynb
+++ b/Notebooks/topography/topography_insertion.ipynb
@@ -19,8 +19,9 @@
    "source": [
     "# Set variables\n",
     "working_dir = '../..'  # This repository's root directory\n",
-    "insitu_data_path = 'Data/pcs/pcs.csv'\n",
-    "output_dir_path = 'output/csv/in-situ_topography_pcs.csv'"
+    "insitu_data_path = 'Data/fc/fc.csv'\n",
+    "output_dir_path = 'output/csv/in-situ_topography_fc.csv'\n",
+    "tif_files_keyword = \"\""
    ]
   },
   {
@@ -164,9 +165,9 @@
    },
    "outputs": [],
    "source": [
-    "sites_df = add_data_to_df(sites_df, 'slope', tif_files_keyword=\"pcs\")\n",
-    "sites_df = add_data_to_df(sites_df, 'aspect', tif_files_keyword=\"pcs\")\n",
-    "sites_df = add_data_to_df(sites_df, 'relief', tif_files_keyword=\"pcs\")\n",
+    "sites_df = add_data_to_df(sites_df, 'slope', tif_files_keyword=tif_files_keyword)\n",
+    "sites_df = add_data_to_df(sites_df, 'aspect', tif_files_keyword=tif_files_keyword)\n",
+    "sites_df = add_data_to_df(sites_df, 'relief', tif_files_keyword=tif_files_keyword)\n",
     "sites_df"
    ]
   },
@@ -284,6 +285,15 @@
     "\n",
     "df['veg_cover'] = df.progress_apply(get_veg_cover, axis=1)\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sites_df['veg_cover'].isna()"
    ]
   },
   {
