--- a/Notebooks/topography/topography_insertion.ipynb
+++ b/Notebooks/topography/topography_insertion.ipynb
@@ -293,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sites_df['veg_cover'].isna()"
+    "df['veg_cover'].isna().sum()"
    ]
   },
   {
@@ -315,9 +315,16 @@
    "source": [
     "# save df\n",
     "df.drop(columns=['dea_x', 'dea_y', 'veg_cover_point_series'], inplace=True)\n",
-    "df.to_csv(os.path.join(output_dir, output_dir_path), index=False)\n",
+    "df.to_csv(os.path.join(working_dir, output_dir_path), index=False)\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
